fix: text alignment

--- a/webapp/src/components/Modals/SubmitTransactionModal/SubmitTransactionModal.module.css
+++ b/webapp/src/components/Modals/SubmitTransactionModal/SubmitTransactionModal.module.css
@@ -34,7 +34,7 @@
     align-items: center;
     bottom: 28px;
     position: fixed;
-    width: 100%;
+    width: 90%;
   }
 
   :global(.ui.modal) > .actions,
